<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- A 'parent' preference, which enables/disables child preferences (below)
         when checked/unchecked. -->
    <SwitchPreference
        android:defaultValue="false"
        android:key="notifications_new_message"
        android:title="@string/pref_title_new_message_notifications" />

    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
    <SwitchPreference
        android:defaultValue="false"
        android:dependency="notifications_new_message"
        android:key="notifications_new_message_vibrate"
        android:title="@string/pref_title_vibrate" />

    <SwitchPreference
        android:defaultValue="false"
        android:dependency="notifications_new_message"
        android:key="notifications_new_message_screen"
        android:title="@string/pref_title_screenon" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="notifications_location_info"
        android:title="@string/pref_title_location_info" />

    <SwitchPreference
        android:defaultValue="false"
        android:dependency="notifications_location_info"
        android:key="notifications_distance_check"
        android:title="@string/pref_title_location" />

</PreferenceScreen>
